--- a/函数.md
+++ b/函数.md
@@ -51,3 +51,38 @@ outer()()   # This is inner
 
 
 
+#### 2. lambda表达式
+
+当函数体中只有一行return语句时，函数的定义可以用一个lambda表达式来代替，其语法格式为: 
+
+```lambda  [形式参数1, 形式参数2, ... , 形式参数n]: 表达式```
+
+> 没有def  func()
+>
+> - 无关键字def
+> - 无函数名
+> - 无小括号
+> - 形式参数的表达式相当于函数的返回值
+
+
+
+```python
+def add(num1,num2):
+    return num1 + num2
+
+print(add(1,2))  # 3
+
+print((lambda num1, num2: num1 +num2)(1,2))  # 3
+
+"""
+   lambda表达式也是对象，从而lambda表达式可以赋值给变量
+"""
+le = lambda num1, num2: num1 +num2
+print(le(1,2))  # 3
+```
+
+
+
+
+
+#### 3.
