命名空间/作用域

--- a/函数.md
+++ b/函数.md
@@ -85,4 +85,155 @@ print(le(1,2))  # 3
 
 
 
-#### 3.
+#### 3. 命名空间/作用域
+
+![作用域](pics\作用域.png)
+
+
+
+##### 3.1 作用域查找顺序
+
+```python
+"""
+   当在某个作用域中访问变量时，会按照LEGB的顺序依次搜索该作用域及其后面的所有作用域，
+如果找到了则停止搜索，如果没有找到则抛出NameError。
+"""
+print(id(123))    # 内置函数id
+id = 'Global'
+
+def outside():
+    id = 'Enclosing'
+    def inside():
+        # id = 'Local'
+        print(id)
+    inside()
+
+outside()  # Enclosing ,依次注释id得到不同的结果
+
+i = 11
+def fun1():
+    i = 22
+    print(i)
+
+fun1()     # 22
+print(i)   # 11
+```
+
+
+
+##### 3.2 变量的重新定义和访问
+
+**当在当前命名空间下定义同名的变量时，会把上级命名空间的同名变量给屏蔽了**（与上面的对应）
+
+```python
+i = 11
+def fun1():
+    # 重新定义了一个局部变量i， 把全局变量i给屏蔽了
+    i = 22
+    print(i)
+
+fun1()     # 22
+print(i)   # 11
+```
+
+
+
+异常访问-->
+
+```python
+j = 0
+def fun2():
+    # 在局部变量里面访问了变量j，所以首先到局部作用域访问变量j，但是在绑定这个变量之前先访问了(在定义j = 5之前被访问了)
+    print(j)
+    j = 5
+fun2()     # UnboundLocalError: local variable 'j' referenced before assignment
+```
+
+
+
+```python
+def fun3():
+    # 相当于: j = j + 1， 当计算等号右边的j + 1时，新定义的局部变量还没有被赋值，因此程序报错
+    j += 1
+    print(j)
+
+fun3()   # UnboundLocalError: local variable 'j' referenced before assignment
+```
+
+
+
+##### 3.3 可变变量的修改
+
+**如果引用的对象是可变类型的，可以修改对象的内容**
+
+```python
+"""
+   在默认情况下，在局部作用域或嵌套作用域中不能修改全局变量所引用的对象（但是，如果引用的对象是可变类型的，
+可以修改对象的内容）
+"""
+g2 = [3]
+def f3():
+    # 重新定义一个局部变量g2， 把全局变量g2给屏蔽了
+    # g2 = [1]
+
+    g2[0] = 8
+    print(g2)
+
+f3()        # [8]
+print(g2)   # [8]
+```
+
+
+
+##### 3.4 global 和 nonlocal关键字
+
+表明在局部作用域或嵌套作用域中并没有重新定义一个新的同名变量，而是使用外部作用域的变量。
+
+
+
+修改全局变量:
+
+```python
+num = 1
+def fun1():
+    global num   # 使用global关键字申明
+    print(num)
+    num = 123
+    print(num)
+fun1()
+print(num)
+```
+
+输出结果:
+
+> 1
+> 123
+> 123
+
+
+
+修改嵌套作用域( enclosing 作用域， 外层非全局作用域) 中的变量则需要使用 nonlocal 关键字了:
+
+```python
+def outer():
+    num = 10
+    def inner():
+        nonlocal num   # nonlocal关键字声明
+        num = 100
+        print(num)
+    inner()
+    print(num)
+outer()
+```
+
+输出结果:
+
+> 100
+>
+> 100
+
+
+
+#### 4. 闭包
+
+闭包是指延伸了作用域的函数，在其中能够放访问未在函数定义体中定义的非全局变量。
